docs: 체크리스트 예시 수정

--- a/.github/ISSUE_TEMPLATE/-기능--구현할-기능-제목.md
+++ b/.github/ISSUE_TEMPLATE/-기능--구현할-기능-제목.md
@@ -20,8 +20,10 @@ assignees: ''
 ## 작업할 내용
 
 > 작업 단계와 염두해야 할 부분을 최대한 세분화하여 자신만의 체크리스트를 작성해주세요
-[ ]
+- [ ] ㅁㄴㅇㄹ
+- [ ] ㅁㄴㅇㄹ
 
 ## (선택) 참고자료
 
 > 작업에 사용할 참고 자료가 있다면 작성해주세요
+> 
